Organisation logo alignment fixed

--- a/style.css
+++ b/style.css
@@ -80,15 +80,11 @@ footer{
 
 .expTitleWrapper{
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	flex-wrap: wrap;
 	box-shadow: 2px 2px 2px #00000041;
 	border: 0.5px solid #ccc;
 	margin-bottom: 30px;
 	align-items: center;
 	padding: 20px;
-}
-.expTitle{
-	width: 600px;
-	padding: 10px;
 }
